[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy64.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 31.5 )

[sub_resource type="Animation" id=3]
resource_name = "Move"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -12.0, 0.0, 12.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -12.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Move"

[sub_resource type="AnimationNodeStateMachine" id=6]
states/Move/node = SubResource( 5 )
states/Move/position = Vector2( 621, 141 )
start_node = "Move"

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
rotation = -0.20944
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31.5 )
shape = SubResource( 1 )

[node name="HoleRayCast" type="RayCast2D" parent="."]
position = Vector2( 24, -47 )
enabled = true
cast_to = Vector2( 0, 320 )
collision_mask = 4

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2( 17.25, -60.078 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4

[node name="PlayerDetectionArea" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2( 42, -31.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
